# AstroRAW-o-Matic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.de.md  README.md
.github/workflows/: ci.yml  release.yml
Formula/: astroraw-o-matic.rb
crates/astroraw-cli/: Cargo.toml
crates/astroraw-cli/src/: args.rs  display.rs  main.rs
crates/astroraw-cli/src/commands/: convert.rs  inspect.rs  mod.rs  validate.rs
crates/astroraw-core/: Cargo.toml
crates/astroraw-core/src/: error.rs  lib.rs
crates/astroraw-core/src/fits/: writer.rs
crates/astroraw-core/src/logging/: mod.rs
crates/astroraw-core/src/metadata/: resolver.rs
crates/astroraw-core/src/raw/: reader.rs
crates/astroraw-core/src/session/: loader.rs  validator.rs
crates/astroraw-core/tests/: metadata_resolver.rs  session_json.rs  session_validator.rs
crates/astroraw-gui/frontend/: package-lock.json  package.json
crates/astroraw-gui/frontend/src/: App.svelte
crates/astroraw-gui/frontend/src/lib/: ConvertPanel.svelte  FileList.svelte  Footer.svelte  HelpDialog.svelte  ResultsPanel.svelte  SessionForm.svelte
crates/astroraw-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/astroraw-gui/src-tauri/capabilities/: default.json
crates/astroraw-gui/src-tauri/icons/: icon.icns
crates/astroraw-gui/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/astroraw-models/: Cargo.toml
crates/astroraw-models/src/: fits_header.rs  frame.rs  lib.rs  metadata.rs  session.rs
docs/: ARCHITECTURE.md  HANDOVER.md  LICENSE_NOTES.md  ROADMAP.md  USER_GUIDE.de.md  USER_GUIDE.md  release-notes-v0.3.0.md
examples/: session.json  session_minimal.json
integrations/nina-plugin/: README.md
integrations/nina-plugin/docs/: ARCHITECTURE.md  NINA_INTEGRATION.md  UI_PREVIEW.md
integrations/nina-plugin/examples/: nina_session.json
integrations/nina-plugin/src/: AstroRawOMatic.Nina.Plugin.csproj  BridgeService.cs  MetadataBuilder.cs  Plugin.cs  PluginOptions.cs  PluginOptionsView.xaml
