[package]
name = "astroraw-core"
description = "Core engine for AstroRAW-o-Matic: RAW reading, FITS writing, metadata resolution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astroraw-models = { path = "../astroraw-models" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }

# EXIF metadata extraction
kamadak-exif = "0.5"

# RAW pixel data extraction // pure Rust, MIT licensed
rawler = "0.6"

[dev-dependencies]
tempfile = "3"
