[package]
name = "astroraw-gui"
description = "AstroRAW-o-Matic GUI (Tauri + Svelte)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.77.2"

[lib]
name = "astroraw_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
astroraw-core = { path = "../../astroraw-core" }
astroraw-models = { path = "../../astroraw-models" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
log = "0.4"
tauri-plugin-opener = "2.5.4"
walkdir = { workspace = true }
